[package]
name = "async_broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
tokio = {version ="1.25.0", features = ["full"]}
regex = "1"
hex = "0.4.3"
bincode = "2.0.0-rc.2"
rand = "0.8.5"
try-catch = "0.2.2"
toml = "0.7.2"
serde = { version = "1.0.152" , features = ["derive"] }
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]