[package]
name = "async_broker_messages"
version = "0.3.0"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
tokio = {version ="1.25.0", features = ["full"]}
rand = "0.8.5"
toml = "0.7.2"
serde = { version = "1.0.152" , features = ["derive"] }
lazy_static = "1.4.0"